# hidethedata

./: .gitignore  CMakeLists.txt  README.md
src/: compression.c  compression.h  copy.h  core.h  main.c  png.c  png.h  utils.c  utils.h
